fixed some bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,6 @@ export(pairedDTPlot)
 export(pairedDTPlotUI)
 export(readwwwResource)
 export(runDemo)
+export(runDemoPairedDTplot)
+export(runDemoarrowButtonGroupInput)
 export(wwwResourcePath)
