--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Extend Shiny Modules and Inputs
 Version: 0.0.1
 Author: Yifu Yan
-Maintainer: Yifu Yan(yifyan@hotmail.com)
+Maintainer: Yifu Yan <yanyifu94@hotmail.com>
 Descripition: shinyModulesEx uses custom input bindings and modules to create
-    interesting widgets 
+    interesting widgets
 Depends: R (>= 3.1.0)
 Imports:
     shiny,
