--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,11 @@
 export(arrowButtonGroupInput)
 export(dataPasserInput)
 export(glueCSS)
-export(pairedDTPlotModule)
-export(pairedDTPlotModuleUI)
+export(pairedDTPlotlyModule)
+export(pairedDTPlotlyModuleUI)
 export(readwwwResource)
 export(runDemo)
-export(runDemoPairedDTplot)
+export(runDemoPairedDTplotlyModule)
 export(runDemoarrowButtonGroupInput)
 export(runDemoselectArrowInputModule)
 export(selectArrowInputModule)
