--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ Imports:
     formattable,
     glue,
     plotly,
-    dplyr,
-    purrr
+    tidyverse
 License: MIT 
 Encoding: UTF-8
 LazeData: true
