updates on pairedDTPlotlyModule, FSDTModule

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(FSDTSampleData)
 export(arrowButtonGroupInput)
 export(createFSTable)
 export(dataPasserInput)
+export(format_number)
 export(glueCSS)
 export(pairedDTPlotlyModule)
 export(pairedDTPlotlyModuleUI)
