fixed bugs in pairedDTPlotlyModule, now it works for tibbles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,9 @@ export(arrowButtonGroupInput)
 export(createFSTable)
 export(dataPasserInput)
 export(format_number)
-export(glueCSS)
+export(isMobile)
 export(pairedDTPlotlyModule)
 export(pairedDTPlotlyModuleUI)
-export(readwwwResource)
 export(runDemo)
 export(runDemoFSDTModule)
 export(runDemoPairedDTplotlyModule)
@@ -18,4 +17,3 @@ export(runDemoarrowButtonGroupInput)
 export(runDemoselectArrowInputModule)
 export(selectArrowInputModule)
 export(selectArrowInputModuleUI)
-export(wwwResourcePath)
