renamed module to drilldownDTModule

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(FSDTSampleData)
 export(arrowButtonGroupInput)
 export(createFSTable)
 export(dataPasserInput)
+export(drilldownDTModule)
+export(drilldownDTModuleUI)
 export(format_number)
 export(isMobile)
 export(pairedDTPlotlyModule)
