--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,13 +10,12 @@ Depends: R (>= 3.1.0)
 Imports:
     shiny,
     shinyWidgets,
-    shinydashboard
+    shinydashboard,
     DT,
     formattable,
     glue,
     plotly,
-    tidyverse,
-    
+    tidyverse
 License: MIT 
 Encoding: UTF-8
 LazeData: true
